--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
+    "react-router-scroll-top": "^0.1.1",
     "react-scripts": "3.0.0",
     "sass": "^1.19.0"
   },
